# moma

./: .gitignore  Cargo.toml  README.md
examples/bioinformatics/: Cargo.toml  README.md
examples/bioinformatics/src/: main.rs
examples/cosmology/: Cargo.toml  README.md  autocorr.csv  fft_spectrum.csv  origin_shift.csv
examples/cosmology/src/: main.rs
examples/goldbach_projector/: Cargo.toml  README.md
examples/goldbach_projector/src/: main.rs
examples/key_derivation_function/: Cargo.toml  README.md
examples/key_derivation_function/src/: main.rs
examples/mass_field/: Cargo.toml  README.md
examples/mass_field/src/: main.rs
examples/origin_drift/: Cargo.toml  README.md
examples/origin_drift/src/: main.rs
examples/prime_gaps/: Cargo.toml  README.md
examples/prime_gaps/src/: main.rs
src/: analysis.rs  barycentric.rs  biosig.rs  codon.rs  composite.rs  composite_field.rs  core.rs  cosmo.rs  entropy.rs  goldbach.rs  influence.rs  lib.rs  massfield.rs  mutation.rs  origin_drift.rs  primes.rs  resonance.rs  score.rs  strategy.rs  utils.rs
