[package]
name = "moma"
version = "0.2.9"
edition = "2024"
authors = ["Neil Crago"]
description = "Moving Origin Modular Arithmetic (MOMA), a library for modeling complex systems"
license = "MIT or Apache-2.0"
repository = "https://github.com/neil-crago/moma"
keywords = ["modulo", "math", "simulation", "analysis", "modeling"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
]

[dependencies]
rand = "0.9.2"


