[package]
name = "moma"
version = "0.3.2"
edition = "2024"
authors = ["Neil Crago"]
description = "Moving Origin Modular Arithmetic (MOMA), a library for modeling complex systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neil-crago/moma"
keywords = ["modulo", "math", "simulation", "analysis", "modeling"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
rand = "0.9.2"


