[package]
name = "key_derivation_function"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago <n.j.crago@gmail.com>"]
description = "A demonstration of a key derivation function using the moma crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neil-crago/key_derivation_function"


[dependencies]
moma = { path = "../../../moma" }
sha2 = "0.10"
hex = "0.4" # For nicely printing the output key